bin_PROGRAMS = tcpserver tcpclient


tcpserver_SOURCES = server_main.cpp Server.cpp TCPServer.cpp strfuncts.cpp Pollard.cpp
# tcpserver_LDFLAGS = -largon2

tcpclient_SOURCES = client_main.cpp Client.cpp TCPClient.cpp strfuncts.cpp Pollard.cpp

# For homework 2
# my_adduser_SOURCES = adduser_main.cpp PasswdMgr.cpp FileDesc.cpp strfuncts.cpp
# my_adduser_LDFLAGS = -largon2
